--- a/Curso HTML e CSS Otavio Miranda/aula 06/index06-textual.html
+++ b/Curso HTML e CSS Otavio Miranda/aula 06/index06-textual.html
@@ -48,7 +48,22 @@
         <menu>
             <li>Menu é a mesma coisa que a lista</li>
             <li>Com o mesmo valor semantico</li>
-        </menu>   
+        </menu>
+        <!-- <pre> é a tag utilizada para representar texto pré-formatado. Basicamente o texto fica exatamente como ele está no documento-->
+        <pre>
+            function Preformatol(nike, dique) {
+                let dique = suanike;
+                let nike = patchon;
+                if (patchon ==> 12) {
+                    tudo;
+                }
+            }
+        </pre>
+        <!-- <blockquote> indica que o texto incluído é uma longa citação.-->
+        <blockquote>
+            Isso aqui é uma longa citação, bem dificil de eu usar uma negocio desses, ta maluco.<br>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, ducimus? Iusto, molestiae nesciunt placeat consectetur laboriosam rem consequuntur adipisci voluptate dolorum, illo, reiciendis neque dicta dignissimos nostrum. Labore, veniam quo.
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis odit vel ducimus, quaerat iure magni magnam itaque, suscipit sit ipsa eveniet laboriosam dolore nostrum inventore quasi. Temporibus libero voluptatibus alias.
+        </blockquote>   
     </main>
     <footer>
     </footer>
