--- a/Curso HTML e CSS Otavio Miranda/aula 06/index06-semanticas-textuais.html
+++ b/Curso HTML e CSS Otavio Miranda/aula 06/index06-semanticas-textuais.html
@@ -83,7 +83,23 @@
     <hr>
     <!--a <small> deixa as letras pequenas-->
     <p>Representa comentários laterais e letras <small>pequenas</small>, como direitos autorais e texto jurídico, independente de seu estilo de apresentação.</p>
-
-
+    <hr>
+    <!--A <span> é um contêiner embutido usado para marcar uma parte de um texto ou parte de um documento. Facilmente estilizada por CSS ou manipulada com JavaScript usando o atributo class ou id. -->
+    <p>My mother has <span style="color:blue">blue</span> eyes.</p>
+    <hr>
+    <!--A <strong>é usada para definir textos de grande importância. O conteúdo interno normalmente é exibido em negrito-->
+    <strong>This text is verry important!"</strong>
+    <hr>
+    <!--A <sub> define o texto subscrito. A <sup> define texto sobrescrito.-->
+    <p> Agua é feita de H<sub>2</sub>O. potenciação de 2<sup>4</sup> fica 16</p>
+    <hr>
+    <!--A <u> representa algum texto desarticulado e com estilo diferente do texto normal, como palavras com erros ortográficos ou nomes próprios em texto chinês.-->
+    <p>Essa tag deixa a <u>palavra</u> com o risco em baixo</p>
+    <hr>
+    <!--A <var> é usada para definir uma variável em programação ou em uma expressão matemática. O conteúdo interno normalmente é exibido em itálico .-->
+    <p>The area of a triangle is: 1/2 x <var>b</var> x <var>h</var>, where <var>b</var> is the base, and <var>h</var> is the vertical height.</p>
+    <hr>
+    <!--A <wbr> (Oportunidade de quebra de palavra) especifica onde em um texto seria aceitável adicionar uma quebra de linha.-->
+    <p> Essa tag tag tag adiconar uma possível quebre de linha, quando for diminuir a tela e precisar de quebra de linha ele vai escolher essa tag afjaawjgfawgjawkg<wbr>awpkgjapgjpawgjpawj<wbr>gpawjgGPwjpGJ </p>
 
 </body>
