--- a/Curso HTML e CSS Otavio Miranda/landing page/index.html
+++ b/Curso HTML e CSS Otavio Miranda/landing page/index.html
@@ -6,7 +6,7 @@
     <title>Landing page</title>
     <meta name="author" content="Luan Gerber Siiss">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <!--Link para as fontes usadas no site-->
+    <!--Link para fontes usadas no site-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap"
@@ -14,6 +14,21 @@
     
 </head>
 <body>
+    <aside class="menu">
+        <div class="menu-content main-content">
+            <h1><a href="#">LOGO</a></h1>
+            
+            <nav>
+                <ul>
+                    <li><a href="#">Intro</a></li>
+                    <li><a href="#">Top 3</a></li>
+                    <li><a href="#">Gallery</a></li>
+                    <li><a href="#">Work</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </aside>
     <section class="main-bg secao">
         <div class="main-content">
             <h1>Titulo Massa</h1>
@@ -25,5 +40,8 @@
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum vitae explicabo quae aperiam optio vero quia accusantium, sunt maiores natus esse, enim qui assumenda rem nesciunt pariatur iste harum animi!</p>
         </div>
     </section>
+
+    <section class="secao"></section>
+    <section class="secao"></section>
 </body>
 </html>
