--- a/Curso HTML e CSS Otavio Miranda/landing page/index.html
+++ b/Curso HTML e CSS Otavio Miranda/landing page/index.html
@@ -14,7 +14,7 @@
     
 </head>
 <body>
-    <aside class="menu">
+    <aside class="menu white-bg">
         <div class="menu-content main-content">
             <h1><a href="#">LOGO</a></h1>
             
