--- a/Curso HTML e CSS Otavio Miranda/landing page/index.html
+++ b/Curso HTML e CSS Otavio Miranda/landing page/index.html
@@ -29,19 +29,22 @@
             </nav>
         </div>
     </aside>
+
+    <div class="menu-spacing"></div>
+
     <section class="main-bg secao">
-        <div class="main-content">
-            <h1>Titulo Massa</h1>
-            <h2>Teste</h2>
-            <h3>Teste</h3>
-            <h4>Teste</h4>
-            <h5>Teste</h5>
-            <h6>Teste</h6>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum vitae explicabo quae aperiam optio vero quia accusantium, sunt maiores natus esse, enim qui assumenda rem nesciunt pariatur iste harum animi!</p>
+        <div class="main-content intro-content">
+            <div class="intro-text-content">
+                <h2>JANUARY BRINGS US FIREFOX 85</h2>
+                <p>To wrap up January, we are pround to bring you the release of Firefox 85. In this version we are bringing you support for 
+                    the :focus-visible pseudo-class in CSS and associated devtools, ande the complete removal of Flash support from Firefox.</p>
+            </div>
+            <div class="intro-image">
+                <img alt="Imagem das linguagens web javascript, css e html" src="assets/midias/javascript-not-optimize.svg">
+            </div>
         </div>
     </section>
 
-    <section class="secao"></section>
-    <section class="secao"></section>
+    <section class="white-bg secao"></section>
 </body>
 </html>
