--- a/Curso HTML e CSS Otavio Miranda/landing page/index.html
+++ b/Curso HTML e CSS Otavio Miranda/landing page/index.html
@@ -16,14 +16,13 @@
 <body>
     <aside class="menu white-bg">
         <div class="menu-content main-content">
-            <h1><a href="#">LOGO</a></h1>
+            <h1><a href="#home">LOGO</a></h1>
             
             <nav>
                 <ul>
                     <li><a href="#intro">Intro</a></li>
-                    <li><a href="#top3">Top 3</a></li>
-                    <li><a href="#">Gallery</a></li>
-                    <li><a href="#">Work</a></li>
+                    <li><a href="#grid-one">grid one</a></li>
+                    <li><a href="#gallary">gallary</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
@@ -32,7 +31,7 @@
 
     <div class="menu-spacing"></div>
 
-    <section id="intro" class="main-bg secao">
+    <section id="home" class="main-bg secao">
         <div class="main-content intro-content">
             <div class="intro-text-content">
                 <h2>JANUARY BRINGS US FIREFOX 85</h2>
@@ -45,7 +44,7 @@
         </div>
     </section>
 
-    <section id="top3" class="white-bg secao">
+    <section id="intro" class="white-bg secao">
         <div class="main-content top3-content">
             <h2>TOP 3 JOBS</h2>
             <p>The release of Apple Solicon-based Macs at he end of last year generated a flurry of 
@@ -57,6 +56,34 @@
             <p>We'll then explain how DRM/EME works on the new platform, talk about our experience with 
                 macOs Big Sur, and discuss various updater problems we had to deal with. We'll conclude 
                 with the release and an overview of various other improvements that are in the pipeline.</p>
+
+        </div>
+    </section>
+
+    <section  id="grid-one" class="grid-one main-bg secao">
+        <div class="main-content grid-one-content">
+            <h2 class="grid-main-heading">My grid</h2>
+            <p class="grid-description">Uma breve descrição amigo</p>
+            <div class="grid">
+                <article>
+                    <h3>Teste 1</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis, natus consectetur similique doloribus possimus praesentium nulla animi deleniti nisi illo exercitationem perferendis numquam est, cupiditate earum quae dolores soluta eius.</p>
+                </article>
+                <article>
+                    <h3>Teste 2</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vamos escrever um pouco mais, assim esse paragrafo ocupa mais espaço. Desse modo, fica legal testar.</p>
+                </article>
+                <article>
+                    <h3>Teste 3</h3>
+                    <p> Voluptatum reprehenderit minima nostrum animi accusamus pariatur excepturi totam a inventore placeat, minus cumque velit ipsa officiis nihil deserunt aliquam, harum at.</p>
+                </article>
+            </div>
+
+        </div>
+    </section>
+
+    <section id="gallary" class="secao white-bg">
+        <div class="main-content">
 
         </div>
     </section>
