--- a/Curso HTML e CSS Otavio Miranda/landing page/index.html
+++ b/Curso HTML e CSS Otavio Miranda/landing page/index.html
@@ -82,8 +82,30 @@
         </div>
     </section>
 
-    <section id="gallary" class="secao white-bg">
-        <div class="main-content">
+    <section  id="gallary" class="grid-one white-bg secao">
+        <div class="main-content grid-one-content">
+            <h2 class="grid-main-heading">Galeria</h2>
+            <p class="grid-description">fotos legais</p>
+            <div class="grid">
+                <div class="gallary-image">
+                    <img alt="Imagem aleatoria do unsplash" src="http://source.unsplash.com/random/360x360?r=1">
+                </div>
+                <div class="gallary-image">
+                    <img alt="Imagem aleatoria do unsplash" src="http://source.unsplash.com/random/360x360?r=2">
+                </div>
+                <div class="gallary-image">
+                    <img alt="Imagem aleatoria do unsplash" src="http://source.unsplash.com/random/360x360?r=3">
+                </div>
+                <div class="gallary-image">
+                    <img alt="Imagem aleatoria do unsplash" src="http://source.unsplash.com/random/360x360?r=4">
+                </div>
+                <div class="gallary-image">
+                    <img alt="Imagem aleatoria do unsplash" src="http://source.unsplash.com/random/360x360?r=5">
+                </div>
+                <div class="gallary-image">
+                    <img alt="Imagem aleatoria do unsplash" src="http://source.unsplash.com/random/360x360?r=6">
+                </div>
+            </div>
 
         </div>
     </section>
