--- a/Curso HTML e CSS Otavio Miranda/landing page/index.html
+++ b/Curso HTML e CSS Otavio Miranda/landing page/index.html
@@ -109,5 +109,56 @@
 
         </div>
     </section>
+    <section id="pricing" class="white-bg secao">
+        <div class="main-content top3-content">
+            <h2>Pricing</h2>
+            <p>The release of Apple Solicon-based Macs at he end of last year generated a flurry of 
+                news coverage and some surprises at the machine's performace. This post details some 
+                background information on the experience of porting Firefox to run natively on these CPUs</p>
+            <p>We'll start with some background on the mac transition and give an overview of Firefox 
+                internal that needed to know about the new architecture, before moving on to the 
+                concept of Universal Binaries.</p>
+            <div>
+                <table class="table-pricing">
+                    <legend>Pricing table</legend>
+                    <thead>
+                        <tr>
+                            <th>Title 1</th>
+                            <th>Title 2</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        <tr>
+                            <td>Content 1</td>
+                            <td>Content 2</td>
+                        </tr>
+                        <tr>
+                            <td>Content 1</td>
+                            <td>Content 2</td>
+                        </tr>
+                        <tr>
+                            <td>Content 1</td>
+                            <td>Content 2</td>
+                        </tr>
+                        <tr>
+                            <td rowspan="2">Content 1</td>
+                            <td>Content 2</td>
+                        </tr>
+                        <tr>
+                            
+                            <td>Content 2</td>
+                        </tr>
+                        <tr>
+                            <td>Content 1</td>
+                            <td>Content 2</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            
+        </div>
+    </section>
+
 </body>
 </html>
