--- a/Curso HTML e CSS Otavio Miranda/landing page/index.html
+++ b/Curso HTML e CSS Otavio Miranda/landing page/index.html
@@ -24,7 +24,7 @@
                     <li><a href="#grid-one">grid one</a></li>
                     <li><a href="#gallary">gallary</a></li>
                     <li><a href="#pricing">Pricing</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -174,6 +174,54 @@
             
         </div>
     </section>
+
+    <div class="menu-spacing"></div>
+
+    <section id="contact" class="main-bg secao">
+        <div class="main-content intro-content">
+            <div class="intro-text-content">
+                <h2>JANUARY BRINGS US FIREFOX 85</h2>
+                <p>To wrap up January, we are pround to bring you the release of Firefox 85. In this version we are bringing you support for 
+                    the :focus-visible pseudo-class in CSS and associated devtools, ande the complete removal of Flash support from Firefox.</p>
+            </div>
+            <div class="intro-image">
+                <img alt="Imagem das linguagens web javascript, css e html" src="assets/midias/javascript.svg">
+            </div>
+
+            <div class="contact-form">
+                <fieldset class="form-grid">
+                    <legend>Formulario de contato</legend>
+                    <div class="form-group">
+                        <label for="first-name">Primeiro Nome:</label>
+                        <input type="text" name="first-name" id="first-name" placeholder="Seu Nome">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="last-name">Sobrenome:</label>
+                        <input type="text" name="last-name" id="last-name" placeholder="Seu sobrenome">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="email">Email:</label>
+                        <input type="email" name="email" id="email" placeholder="Seu email">
+                    </div>
+
+                    <div class="form-group full-width">
+                        <label for="message">Mensagem:</label>
+                        <textarea id="message" name="message" cols="30" rows="10" placeholder="Sua mensagem"></textarea>
+                    </div>
+
+                    <div class="form-group">
+                        <button type="submit">Enviar Mensagem</button>
+                    </div>
+                </fieldset>
+            </div>
+        </div>
+    </section>
+
+    <footer id="footer" class=" footer white-bg">
+        <p><a rel="nofollow" target="_blank" href="https://github.com/LuanGSiiss/auto-didata">Feito com <span class="heart">❤</span> por Luan Gerber Siiss</a></p>
+    </footer>
 
 </body>
 </html>
