--- a/Curso HTML e CSS Otavio Miranda/landing page/index.html
+++ b/Curso HTML e CSS Otavio Miranda/landing page/index.html
@@ -14,12 +14,15 @@
     
 </head>
 <body>
+
+    <input id="close-menu" class="close-menu" type="checkbox" aria-label="close menu" role="button">
+    <label class="close-menu-label" for="close-menu" title="close-menu"></label>
     <aside class="menu white-bg">
         <div class="menu-content main-content">
-            <h1><a href="#home">LOGO</a></h1>
+            <h1 onclick="getElementById('close-menu').checked = false;"><a href="#home">LOGO</a></h1>
             
             <nav>
-                <ul>
+                <ul onclick="getElementById('close-menu').checked = false;">
                     <li><a href="#intro">Intro</a></li>
                     <li><a href="#grid-one">grid one</a></li>
                     <li><a href="#gallary">gallary</a></li>
@@ -222,6 +225,8 @@
     <footer id="footer" class=" footer white-bg">
         <p><a rel="nofollow" target="_blank" href="https://github.com/LuanGSiiss/auto-didata">Feito com <span class="heart">❤</span> por Luan Gerber Siiss</a></p>
     </footer>
+
+    <a class="back-to-top" href="#home">➤</a>
 
 </body>
 </html>
